Se cambian algunos estilos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <section class="fondo-2">
+    <main class="fondo-2">
+        <section>
             <article id="busqueda-random">
                 <h2>Buscador de Recetas random</h2>
                 <div id="mensaje-aclaracion">
